Feature/multiple role navlinks (#25)
* Added the setup for resend mail api

* Handled multiple roles for navlinks

* Increased the upload limit

* Security Enabled

---------

Co-authored-by: Saksham Singla <saksham.singla@abainfotech.com>