@@ -1,12 +1,18 @@
 package com.portfolio.config;
 
 import com.portfolio.security.JwtAuthFilter;
+import com.portfolio.security.CustomUserDetailsService;
+import com.portfolio.filter.AuditFilter;
+import com.portfolio.filter.NotFoundFilter;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.core.annotation.Order;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -19,17 +25,19 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final JwtAuthFilter jwtAuthenticationFilter;
+    private final JwtAuthFilter jwtAuthFilter;
+    private final AuditFilter auditFilter;
+    private final NotFoundFilter notFoundFilter;
+    private final CustomUserDetailsService userDetailsService;
 
-    @Value("${app.frontend.url:http://localhost:3000,http://localhost:5173}")
-    private String frontendUrls;
+    @Value("${app.frontend.url:http://localhost:3000}")
+    private String allowedOrigins;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -37,29 +45,41 @@ public class SecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public AuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+        provider.setUserDetailsService(userDetailsService);
+        provider.setPasswordEncoder(passwordEncoder());
+        return provider;
+    }
 
+    @Bean
+    @Order(2)
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .securityMatcher("/api/**")
+                .cors(Customizer.withDefaults())
                 .csrf(csrf -> csrf.disable())
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
-                                "/api/v1/health",
-                                "/api/v1/public/**",
                                 "/api/v1/auth/**",
-                                "/api/v1/**",
-                                "/swagger-ui.html",
+                                "/api/v1/public/**",
+                                "/api/v1/health",
                                 "/swagger-ui/**",
                                 "/v3/api-docs/**"
                         ).permitAll()
                         .anyRequest().authenticated()
                 )
-                .addFilterBefore(
-                        jwtAuthenticationFilter,
-                        UsernamePasswordAuthenticationFilter.class
+                .authenticationProvider(authenticationProvider())
+                .addFilterBefore(notFoundFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterAfter(auditFilter, JwtAuthFilter.class)
+                .exceptionHandling(ex ->
+                        ex.authenticationEntryPoint((req, res, e) ->
+                                res.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized")
+                        )
                 );
 
         return http.build();
@@ -67,39 +87,23 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration publicApi = new CorsConfiguration();
-        publicApi.setAllowedOriginPatterns(List.of("*"));
-        publicApi.setAllowedMethods(List.of(
-                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
-        ));
-        publicApi.setAllowedHeaders(List.of("*"));
-        publicApi.setAllowCredentials(false);
-
-        CorsConfiguration adminApi = new CorsConfiguration();
-        adminApi.setAllowedOrigins(
-                Arrays.stream(frontendUrls.split(","))
+        System.out.println(allowedOrigins);
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(
+                Arrays.stream(allowedOrigins.split(","))
                         .map(String::trim)
                         .toList()
         );
-        adminApi.setAllowedMethods(List.of(
-                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
-        ));
-        adminApi.setAllowedHeaders(List.of("*"));
-        adminApi.setAllowCredentials(true);
-
+        configuration.setAllowedMethods(
+                Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS")
+        );
+        configuration.setAllowedHeaders(
+                Arrays.asList("Content-Type", "Authorization")
+        );
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source =
                 new UrlBasedCorsConfigurationSource();
-
-        source.registerCorsConfiguration("/api/v1/public/**", publicApi);
-        source.registerCorsConfiguration("/api/v1/**", adminApi);
-
+        source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-
-    @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration config
-    ) throws Exception {
-        return config.getAuthenticationManager();
     }
 }
